
* removed deprecated buttons DSL, ButtonHelper and commit_button helper
* deprecated the top-level :value option that is only used by HiddenInput
* deprecated :hint_class option (use global configuration)
* deprecated :error_class option (use global configuration)
* deprecated :group_by and :group_label (use :collection option with a HTML string generated by Rails' grouped_options_for_select())

2.1.0

2.1.0.rc

* documentation improvements
* improved performance by caching of Formtastic's i18n lookups
* improved performance in production by checking for defined constants instead of catching the exception
* fixed arguments passed into fields_for being flattened one level too deep
* added an optional `index` that an inputs() block can access for use in labels and other HTML attributes

2.1.0.beta

* Added Rails 3.2 compatibility
* Added a new Actions DSL (f.actions, f.action) — see below for deprecation of the Buttons DSL
* Added new i18n_localizer configuration, allowing you to use your own localiser class instead of Formtastic::Localizer
* Added a hidden input before mutli-selects, to allow full clearing of the select (like we do for checkboxes)
* Added support for integers in a :collection for radio and check_boxes inputs
* Added support for time inputs with no current value to default render blank inputs rather than pre-selecting the current time
* Brought back the Form Generator from 1.2.x versions of Formtastic
* Added support for placeholder text on textareas (text inputs)
* Deprecated the Buttons DSL (f.buttons, f.commit_button) in favor of the new Actions DSL — see above
* Removed the previously deprecated :label_method, :value_method & :group_label_method options
* Removed the previously deprecated :as => :numeric
* Removed the previously deprecated inline_errors_for and related methods
* Removed the previously deprecated SemanticFormHelper and SemanticFormBuilder
* Fixed the behavior of :include_blank and :prompt options to be inline with Rails’