@@ -17,6 +17,7 @@ module Formtastic
         warn_deprecated_option!(:error_class, "default_error_class configuration")
         warn_deprecated_option!(:group_by, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
         warn_deprecated_option!(:group_label, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
+        warn_deprecated_option!(:find_options, "YourModel.find(...)")
       end
       
       # Usefull for deprecating options.
