@@ -5,6 +5,7 @@ HEAD
 * deprecated :hint_class option (use global configuration)
 * deprecated :error_class option (use global configuration)
 * deprecated :group_by and :group_label (use :collection option with a HTML string generated by Rails' grouped_options_for_select())
+* deprecated :find_options
 
 2.1.0
 
